[package]
name = "good_cu"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

fern = "0.6"
log = "0.4"
chrono = "0.4"

tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
anyhow = "1.0"
base58 = "0.1"
byteorder = "1.4"
solana-client = "1.14"
solana-sdk = "1.14"
spl-associated-token-account = "1.1"
spl-token = "3.3"
lazy_static = "1.4"
solana-tpu-client = "1.18.26"